tests/reference/asr-test_func_args-a898a72.stderr
semantic error: Number of arguments does not match in the function call
  --> tests/errors/test_func_args.py:11:11
   |
11 |     ans = fib(35, 10)
   |           ^^^^^^^^^^^ (found: '2', expected: '1')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
